--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p>
         <p><strong><u> Planets in the solar system: </u></strong> </p>
         <table>
-            <tr>
+            <tr style="background-color: aquamarine; color: black">
                 <th>No. </th>
                 <th>Planet Name </th>
                 <th>Distance from Sun (in million km)</th>
